# investos

./: .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  pyproject.toml  tailwind.config.js
docs/: requirements.txt
docs/source/: conf.py  index.rst  investos.backtest.rst  investos.portfolio.cost_model.rst  investos.portfolio.result.rst  investos.portfolio.risk_model.rst  investos.portfolio.rst  investos.portfolio_optimization.constraint_model.rst  investos.portfolio_optimization.cost_model.rst  investos.portfolio_optimization.rst  investos.portfolio_optimization.strategy.rst  investos.rst  modules.rst
docs/source/_static/: theme_overrides.css
docs/source/_templates/: fulltoc.html  layout.html
examples/: create_large_dataset.ipynb  mpo.ipynb  playground.ipynb  playground_2.ipynb  quant_crypto_backtest_example.ipynb  rank_long_short.ipynb  spo.ipynb  spo_10k_assets.ipynb  spo_2_5k_assets.ipynb  spo_5k_assets.ipynb
guides/bespoke/: custom_constraint_models.md  custom_cost_models.md  custom_investment_strategies.md  custom_risk_models.md
guides/coming_soon/: guides_under_development.md
guides/introduction/: getting_started.md  how_investos_works.md
guides/off_the_shelf/: backtest_controller.md  constraint_models.md  cost_models.md  investment_strategies.md  risk_models.md
guides/portfolio_engineering/: portfolio_backtesting.md
guides/reporting/: analyzing_backtest_results.md  external_portfolios.md
guides/simple_examples/: rank_long_short.md  spo.md
invest_os/: __init__.py  portfolio_optimization.py  util.py
invest_os/backtest/: __init__.py  forecast_result.py  result.py
invest_os/portfolio_optimization/: __init__.py  backtester.py  optimizer.py  portfolio_optimization.py
invest_os/portfolio_optimization/cost_model/: __init__.py  base_cost.py  holding_cost.py  trading_cost.py
invest_os/portfolio_optimization/strategy/: __init__.py  base_strategy.py  rank_long_short.py
investos/: __init__.py  util.py
investos/backtest/: __init__.py  forecast_result.py  result.py
investos/portfolio/: __init__.py  backtest_controller.py  controller.py
investos/portfolio/constraint_model/: __init__.py  base_constraint.py  factor_constraint.py  leverage_constraint.py  long_constraint.py  return_constraint.py  trade_constraint.py  weight_constraint.py
investos/portfolio/cost_model/: __init__.py  base_cost.py  holding_cost.py  short_holding_cost.py  trading_cost.py
investos/portfolio/result/: __init__.py  base_result.py  forecast_result.py  save_result.py  weights_result.py
investos/portfolio/risk_model/: __init__.py  asset_diagonal_variance_adjustment.py  base_risk.py  bias_statistics.py  factor_covariance_adjustment.py  factor_risk.py  factor_utils.py  risk_util.py  stat_factor_risk.py
investos/portfolio/risk_model/utils/: __init__.py  risk_adjustments.py  risk_utils.py
investos/portfolio/strategy/: __init__.py  base_strategy.py  rank_long_short.py  spo.py  spo_tranches.py  spo_weights.py
investos/portfolio_optimization/: __init__.py  backtester.py  optimizer.py
investos/portfolio_optimization/constraint_model/: __init__.py  base_constraint.py  leverage_constraint.py  long_constraint.py  trade_constraint.py  weight_constraint.py
investos/portfolio_optimization/cost_model/: __init__.py  base_cost.py  holding_cost.py  trading_cost.py
investos/portfolio_optimization/risk_model/: __init__.py  base_risk.py  stat_factor_risk.py
investos/portfolio_optimization/strategy/: __init__.py  base_strategy.py  rank_long_short.py  spo.py
investos/utils/: __init__.py  hydrate.py
test/: test_invest_os.py
tests/: investos_test.py
tests/guide_examples/: rank_long_short_test.py  spo_test.py  spo_tranches_distr_test.py  spo_tranches_test.py  spo_weights_test.py
