[tool.poetry]
name = "investos"
version = "0.3.7"
description = "Reliable backtesting and portfolio optimization for investors who want to focus on generating alpha"
authors = ["Charlie Reese", "ForecastOS"]
license = "Creative Commons Attribution-NonCommercial-ShareAlike (CC-BY-NC-SA)"
readme = "README.md"
packages = [{include = "investos"}]
homepage = "https://investos.io/"
repository = "https://github.com/forecastos/investos"
documentation = "https://investos.readthedocs.io/en/latest/"
keywords = ["investing", "alpha", "backtesting", "portfolio", "optimization", "forecastos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: Other/Proprietary License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.8"
cvxpy = "^1.3.1"
requests = "^2.31.0"
numpy = "^1.24.3"
pandas = "^2.0.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = {version = "^23.7.0", extras = ["jupyter"]}
jupyter = "^1.0.0"
pandas-market-calendars = "^4.1.4"
pytest = "^7.3.1"
ruff = "^0.0.278"
sphinx = "^7.0.0"
ipywidgets = "^8.0.7"
jupyterlab = "^3"
plotly = "^5.15.0"
pyarrow = "^12.0.1"
xgboost = "^1.7.6"
scikit-learn = "^1.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
]
norecursedirs = [
    "__pycache__",
    ".git",
    "docs",
    "examples",
]

[tool.black]
target-version = [
    "py38",
    "py39",
    "py310",
    "py311",
]

[tool.ruff]
exclude = [
    "__pycache__",
    ".git/",
    ".pytest_cache/",
]
select = [
    "B",
    "E",
    "F",
    "I",
    "Q",
    "UP",
    "W",
]
ignore = [
    "B006",  # Mutable argument default
    "B008",  # Function call in default argument
    "E501",  # Line too long 
]
target-version = "py39"

[tool.ruff.per-file-ignores]
"__init__.py" = [
    'F401',  # Unused import
    'F403',  # Wildcard import
]
