[tool.poetry]
name = "investos"
version = "0.10.0"
description = "THIS MODULE IS NOW PART OF forecastos (https://forecastos.com, https://github.com/forecastos/forecastos, and https://pypi.org/project/forecastos). Reliable backtesting and portfolio optimization for investors who want to focus on generating alpha"
authors = ["Charlie Reese", "ForecastOS"]
license = "MIT"
readme = "README.md"
packages = [{include = "investos"}]
homepage = "https://forecastos.com/"
repository = "https://github.com/forecastos/forecastos"
keywords = ["investing", "alpha", "backtesting", "portfolio", "optimization", "forecastos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.8",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Software Development :: Testing",
]

[tool.poetry.dependencies]
python = "^3.9"
forecastos= ">=0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "*_test.py",
]
norecursedirs = [
    "__pycache__",
    ".git",
    "docs",
    "examples",
]

[tool.ruff]
target-version = "py38"
extend-include = [
    "*.ipynb",
]
exclude = [
    "__pycache__",
    ".git/",
    ".pytest_cache/",
]

[tool.ruff.lint]
exclude = ["*.ipynb"]  # Only format Jupyter notebooks, for now
select = [
    "B",
    "E",
    "F",
    "I",
    "Q",
    "UP",
    "W",
]
ignore = [
    "B006",  # Mutable argument default
    "B008",  # Function call in default argument
    "E501",  # Line too long 
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = [
    'F401',  # Unused import
    'F403',  # Wildcard import
]
